--- a/css/sass/_rebrand.scss
+++ b/css/sass/_rebrand.scss
@@ -130,3 +130,7 @@ ul.menu-list {
 .breather>div h3 {
   font-family: $tna_font_roboto_mono;
 }
+
+.auto-height {
+  height: auto;
+}
